--- a/MvvmNavigation/App.xaml
+++ b/MvvmNavigation/App.xaml
@@ -2,14 +2,13 @@
     x:Class="MvvmNavigation.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MvvmNavigation">
+    xmlns:local="using:MvvmNavigation" xmlns:converters="using:MvvmNavigation.Converters">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
-                <!-- Other merged dictionaries here -->
             </ResourceDictionary.MergedDictionaries>
-            <!-- Other app resources here -->
+            <converters:ViewModelToView x:Key="Vm2V"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
